ID: 20101149, changed the homepage style to show jobs accordingly, also changed a few things so the website won't ask the user which type of user he is when loging in, also fixed a bug in search_jobs where user where the job title was not showing correctly

--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ section{
    top:1rem; left:1rem;
    border-radius: .5rem;
    padding:1rem;
-   font-size: 2.5rem;
+   font-size: 1.3rem;
    color:var(--white);
    background-color: var(--red);
 }
